EKS-CLOUDFORMATION-SETUP/vpc-setup.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: CloudFormation template for VPC with public and private subnets, route tables, internet gateway, and NAT gateway

Resources:
  # VPC
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/18
      Tags:
        - Key: Name
          Value: K_POC-vpc

  # Internet Gateway
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: K_POC-igw

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  # Subnets
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: ap-southeast-1a
      Tags:
        - Key: Name
          Value: K_POC-subnet-public1-ap-southeast-1a

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: ap-southeast-1b
      Tags:
        - Key: Name
          Value: K_POC-subnet-public2-ap-southeast-1b

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.3.0/24
      AvailabilityZone: ap-southeast-1a
      Tags:
        - Key: Name
          Value: K_POC-subnet-private1-ap-southeast-1a

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.4.0/24
      AvailabilityZone: ap-southeast-1b
      Tags:
        - Key: Name
          Value: K_POC-subnet-private2-ap-southeast-1b

  # Route Tables
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: K_POC-rtb-public

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: K_POC-rtb-private1-ap-southeast-1a

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: K_POC-rtb-private2-ap-southeast-1b

  # Public Route
  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  # NAT Gateway EIP (Elastic IP)
  NatGatewayEIP:
    Type: AWS::EC2::EIP
  
  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      SubnetId: !Ref PublicSubnet1
      AllocationId: !GetAtt NatGatewayEIP.AllocationId  
      Tags:
        - Key: Name  
          Value: K_POC-nat-public1-ap-southeast-1a

  # Private Route Tables Routes  
  PrivateRoute1:
    Type: AWS::EC2::Route  
    Properties:
      RouteTableId: !Ref PrivateRouteTable1  
      DestinationCidrBlock: 0.0.0.0/0  
      NatGatewayId: !Ref NatGateway  

  PrivateRoute2:
    Type: AWS::EC2::Route  
    Properties:
      RouteTableId: !Ref PrivateRouteTable2  
      DestinationCidrBlock: 0.0.0.0/0  
      NatGatewayId: !Ref NatGateway  

  # Route Table Associations  
  PublicSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation  
    Properties:
      SubnetId: !Ref PublicSubnet1  
      RouteTableId: !Ref PublicRouteTable  

  PublicSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation  
    Properties:
      SubnetId: !Ref PublicSubnet2  
      RouteTableId: !Ref PublicRouteTable  

  PrivateSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation  
    Properties:
      SubnetId: !Ref PrivateSubnet1  
      RouteTableId: !Ref PrivateRouteTable1  

  PrivateSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation  
    Properties:
      SubnetId: !Ref PrivateSubnet2  
      RouteTableId: !Ref PrivateRouteTable2  

Outputs:
  VPCId:
    Description: VPC ID  
    Value: !Ref VPC  

  PublicSubnet1Id:
    Description: Public Subnet 1 ID  
    Value: !Ref PublicSubnet1  

  PublicSubnet2Id:
    Description: Public Subnet 2 ID  
    Value: !Ref PublicSubnet2  

  PrivateSubnet1Id:
    Description: Private Subnet 1 ID  
    Value: !Ref PrivateSubnet1  

  PrivateSubnet2Id:
    Description: Private Subnet 2 ID  
    Value: !Ref PrivateSubnet2  

  InternetGatewayId:
    Description: Internet Gateway ID  
    Value: !Ref InternetGateway  

  NatGatewayId:
    Description: NAT Gateway ID 
    Value: !Ref NatGateway
